cmake_minimum_required(VERSION 3.23)
project(nizi C)

set(CMAKE_C_STANDARD 99)
add_executable(pr_1 pr_1.c)
add_executable(pr_2 pr_2.c)
add_executable(pr_3 pr_3.c)
add_executable(aud_1 aud_1.c)
add_executable(aud_2 aud_2.c)
add_executable(aud_3 aud_3.c)
add_executable(aud_4 aud_4.c)
add_executable(audM_1 audM_1.c)
add_executable(audM_2 audM_2.c)
add_executable(audM_3 audM_3.c)
add_executable(starter_array starter_array.c)


